# routes/index.js
@@ -1,16 +1,7 @@
 const routes = require('express').Router();
 
-routes.use('/movies', require('./movie'));
-routes.use('/movie_genders', require('./movie_gender'));
-
-routes.use(
-  '/',
-  (docData = (req, res) => {
-    let docData = {
-      documentationURL: 'https://nathanbirch.github.io/nathan-byui-api-docs',
-    };
-    res.send(docData);
-  })
-);
+routes.use('/movies', require('./movies'));
+routes.use('/movie_genders', require('./movie_genders'));
 
 module.exports = routes;
+ts = routes;
